firefox fix: word-wrap: break-all;

--- a/src/styles/scss/_items.scss
+++ b/src/styles/scss/_items.scss
@@ -420,7 +420,7 @@ legend.its123-legend {
     display: inline-block;
   }
   .its123-image-description {
-    word-break: break-word;
+    word-break: break-all;
     text-align: center;
     font-weight: bold;
     color: #5a5a5a;
